--- a/assets/_sass/pages/final-report.scss
+++ b/assets/_sass/pages/final-report.scss
@@ -761,10 +761,12 @@
     #{$page}__img-full {
       position: relative;
       z-index: 1;
-      min-height: 800px;
+      margin-bottom: calc(250px + 1rem);
 
       @include breakpoint('medium') {
+        display: block;
         min-height: 630px;
+        margin-bottom: 0;
         padding-top: 2.625rem;
       }
 
@@ -780,10 +782,17 @@
       }
 
       &::before {
+        display: block;
         background-image: url('../../images/final-report/ship-2.jpg');
         background-repeat: no-repeat;
         background-position: 80% center;
         background-size: cover;
+
+        @include breakpoint($break: 'medium', $dir: 'max-width') {
+          top: 100%;
+          height: 250px;
+          z-index: 1;
+        }
 
         @include breakpoint('medium') {
           background-position: center center;
@@ -792,7 +801,12 @@
 
       &::after {
         /* prettier-ignore */
-        background: linear-gradient(180deg, $color__bg 0%, rgba(9, 21, 32, 0) 100%);
+        background: linear-gradient(180deg, #091520 0%, #848D98 100%);
+
+        @include breakpoint('medium') {
+          /* prettier-ignore */
+          background: linear-gradient(180deg, $color__bg 0%, rgba(9, 21, 32, 0) 100%);
+        }
       }
     }
 
